# siemens-fire

./: .gitignore  Dockerfile  README.md  docker_to_chroot.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker_to_chroot.bat  docker_to_chroot.sh
python_modules/: Example_Recon.ipynb  Example_Recon.py  Example_Recon_sctcrop.py  SLR.py  __init__.py  common.py  finst_shim.json  finst_shim.py  grappa.py  mrd_flags.py  navi_corr.py  navi_corr_mark.py  nomad_f0xyz_opt.json  nomad_f0xyz_opt.py  st_b0shim.json  st_b0shim.py  st_fieldmap.json  st_fieldmap.py  st_masking.json  st_masking.py  utils.py
tests/: conftest.py  test_nomad.py  test_st_b0shim.py  test_st_fieldmap.py  test_st_masking.py
uv/: pyproject.toml
